# fractal-ray-marcher

./: Cargo.toml  build.rs
shaders/: shader.wgsl
src/: frame_counter.rs  gpu.rs  main.rs  shader.rs  shader.wgsl
src/shader/: validate.rs
