[package]
name = "signed_distance_field"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
bytemuck = { version = "1.10.0", features = ["derive"] }
glam = { version = "0.21.2", features = ["bytemuck"] }
pollster = "0.2.5"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
wgpu = "0.13.1"
winit = "0.26.1"

[build-dependencies]
anyhow = "1.0.58"
codespan-reporting = "0.11.1"
naga = { version = "0.9.0", features = ["wgsl-in", "validate", "span"] }
walkdir = "2.3.2"
